--- a/app/src/main/res/layout/auth_main.xml
+++ b/app/src/main/res/layout/auth_main.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/toLoginPage"
         android:layout_width="276dp"
         android:layout_height="72dp"
         android:text="Intră în cont"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.187" />
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/toRegisterPage"
         android:layout_width="276dp"
         android:layout_height="72dp"
         android:text="Creează un cont"
@@ -65,6 +65,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/toLoginPage"
         app:layout_constraintVertical_bias="0.071" />
 </androidx.constraintlayout.widget.ConstraintLayout>
