--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -3,64 +3,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".AuthPages.RegisterActivity">
 
     <ImageView
-        android:id="@+id/login_logo"
-        android:layout_width="256dp"
-        android:layout_height="281dp"
+        android:id="@+id/registerLogo"
+        android:layout_width="250dp"
+        android:layout_height="299dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/user_login_icon" />
+        app:layout_constraintVertical_bias="0.079"
+        app:srcCompat="@drawable/pngwing_com" />
 
     <TextView
-        android:id="@+id/login_text"
-        android:layout_width="248dp"
-        android:layout_height="123dp"
+        android:id="@+id/registerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/anton"
-        android:text="Introdu mai jos datele de autentificare:"
+        android:text="Creează-ți un cont introducând mai jos datele cerute:"
         android:textAlignment="center"
         android:textColor="#1866A5"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_logo"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintTop_toBottomOf="@+id/registerLogo"
+        app:layout_constraintVertical_bias="0.058" />
 
     <EditText
-        android:id="@+id/emailTextBoxLogin"
-        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:id="@+id/emailTextBoxRegister"
         android:layout_width="298dp"
         android:layout_height="59dp"
-        android:layout_marginTop="48dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
-        android:selectAllOnFocus="false"
-        android:singleLine="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_text"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintTop_toBottomOf="@+id/registerText"
+        app:layout_constraintVertical_bias="0.069" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordTextBoxLogin"
+        android:id="@+id/passwordTextBoxRegister"
         android:layout_width="298dp"
         android:layout_height="59dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/confirmPassTextBox"
+
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_text"
+        app:layout_constraintTop_toBottomOf="@+id/emailTextBoxRegister"
         app:passwordToggleEnabled="true">
 
 
@@ -73,30 +69,38 @@
         >
     </com.google.android.material.textfield.TextInputLayout>
 
+    <EditText
+        android:id="@+id/confirmPassTextBox"
+        android:layout_width="298dp"
+        android:layout_height="59dp"
+        android:ems="10"
+        android:hint="Confirma parola"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailTextBoxRegister" />
+
     <Button
-        android:id="@+id/backToAuthLogin"
-        android:layout_width="80dp"
-        android:layout_height="45dp"
-        android:background="#2196F3"
-        android:backgroundTintMode="multiply"
+        android:id="@+id/backToAuthRegister"
+        android:layout_width="102dp"
+        android:layout_height="51dp"
+        android:backgroundTint="#2196F3"
         android:text="Înapoi"
-        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTextBoxLogin"
-        app:layout_constraintVertical_bias="0.831" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmPassTextBox"
+        app:layout_constraintVertical_bias="0.902" />
 
     <Button
-        android:id="@+id/loginButton"
-        android:layout_width="191dp"
+        android:id="@+id/createAccButton"
+        android:layout_width="261dp"
         android:layout_height="54dp"
-        android:text="Accesează contul!"
-        app:layout_constraintBottom_toTopOf="@+id/backToAuthLogin"
+        android:text="Creează cont!"
+        app:layout_constraintBottom_toTopOf="@+id/backToAuthRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTextBoxLogin" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/confirmPassTextBox" />
 </androidx.constraintlayout.widget.ConstraintLayout>
